--- a/itemdetail.html
+++ b/itemdetail.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>{{ item['title'] }}</h2>
-    <img src="{{ item['image'] }}" alt="{{ item['title'] }}" style="width:300px;">
+    <img src="{{ item['image_link'] }}" alt="{{ item['title'] }}" style="width:300px;">
     <p><strong>Category:</strong> {{ item['category'] }}</p>
     <p><strong>Description:</strong> {{ item['description'] }}</p>
     <p><strong>Price:</strong> {{ item['price'] }}</p>
